--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
     "require": {
         "php": "^7.1.3",
         "aliyuncs/oss-sdk-php": "^2.3",
+        "barryvdh/laravel-debugbar": "^3.2",
         "encore/laravel-admin": "^1.7",
         "fideloper/proxy": "^4.0",
         "laravel/framework": "5.8.*",
